@@ -16,7 +16,13 @@
     {/strip}<div id="users_loginblock_waiting" class="z-center z-hide">
         {img modname='core' set='ajax' src='indicator_circle.gif'}
     </div>
+
+    {* MODIFICAT XTEC BEGIN - Force use of https in login *}
+    <form id="users_loginblock_login_form" class="z-form z-linear{if !$show_login_form} z-hide{/if}" action="{modurl modname="Users" type="user" func="login" ssl=true}" method="post">
+    {* ORIGINAL 
     <form id="users_loginblock_login_form" class="z-form z-linear{if !$show_login_form} z-hide{/if}" action="{modurl modname="Users" type="user" func="login"}" method="post">
+     MODIFICAT XTEC END *}
+
         <div>
             <input type="hidden" id="users_loginblock_returnpage" name="returnpage" value="{$returnpage|safetext}" />
             <input type="hidden" id="users_loginblock_csrftoken" name="csrftoken" value="{insert name='csrftoken'}" />
