@@ -1,1 +1,5 @@
+{* MODIFICAT XTEC BEGIN - Force use of https in login *}
+<ul><li><a href="{modurl modname='Users' type='user' func='login' ssl=true returnpage=$returnpage|urlencode}">Log in</a></li></ul>
+{* ORIGINAL 
 <ul><li><a href="{modurl modname='Users' type='user' func='login' returnpage=$returnpage|urlencode}">Log in</a></li></ul>
+ MODIFICAT XTEC END *}
